fix white space button

--- a/Goplay/Reports/Notification/Notification.razor.css
+++ b/Goplay/Reports/Notification/Notification.razor.css
@@ -2,7 +2,7 @@
     background-image: url(./img/bg-middle.png),linear-gradient(180deg,#000 20%,rgb(10, 10, 10) 60%,#101019 100%) !important;
     background-size: auto;
     background-repeat: no-repeat;
-    min-height: 51rem;
+    min-height: 28rem;
 }
 ul.messages-list > li {
     list-style: none;
@@ -74,6 +74,9 @@ a .description {
     .width-50{
         max-width: 50rem;
     }
+   /* .marketing {
+        min-height: 52rem;
+    }*/
 }
 /* ==================== Search ========================= */
 .input-group > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
