--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -5,7 +5,7 @@ main {
     background-image: url(/img/bg-middle.png),linear-gradient(180deg,#281728 20%,rgba(132,31,53,1) 60%,#101019 100%) !important;
     background-size: auto;
     background-repeat: repeat;
-    min-height: 100vh;
+    min-height: auto;
 }
 header{
     height: 50px;
